Micro tab: Added button to remove all sodium nitrate
Micro tab: Moved RemoveSoluteControlNode to Macro tab only, Micro module will need another implementation
Micro tab: Fixed: Prevent crystal sites from forming on top of existing crystal components
Micro tab: Fixed: During steady state, particle gets faster and faster
Micro tab: Fixed: Crystals should dissolve gradually instead of completely to better match saturation point behavior
Micro tab: Refactoring to remove dependency on Lattice classes for crystal construction, dissolving or growing
Micro tab: Only dissolve particles that are submerged in the fluid
Micro tab: Made crystals dissolve incrementally
Micro tab: Fixed a bug in incremental crystallization where a binding site was at the wrong angle
Micro tab: Added BindingSiteDebugger to visualize crystal formation
Micro tab: Increased speed of particle random walks
Micro tab: Work toward ensuring that matching sites are contained within the solution for crystal growing
# 0.00.72 (54586) Jul 28, 2011
Micro tab: Renamed SodiumIonParicle => Sodium, etc.
Micro tab: Prefer crystallization sites that are underwater
Micro tab: Added gradual crystallization for NaCl
Micro tab: Improved generics for ItemList
Micro tab: Fixed: item list doesn't notify when particular items are removed
Micro tab: Removed Component in lattice formation, and improved generics arguments for Lattice and Bond
Micro tab: More support for incremental crystallization
Micro tab: First steps toward crystallizing atoms when past saturation point
# 0.00.71 (54538) Jul 26, 2011
Micro tab: Improved behavior under evaporation
Micro tab: Prevent particles from leaving the beaker to the left or right
Micro tab: Fixed: When evaporating, particles can move up past the surface of the water
Micro tab: Fixed: When evaporating too much, particles can be pushed into the floor of the beaker
Micro tab: Fixed saturation point for NaNO3 and CaCl2
Micro tab: Added Component=>Particle method