@@ -1,3 +1,5 @@
+Micro tab: Added button to remove all Calcium Chloride
+Micro tab: Added button to remove all Ethanol
 Micro tab: Added button to remove all sodium nitrate
 Micro tab: Moved RemoveSoluteControlNode to Macro tab only, Micro module will need another implementation
 Micro tab: Fixed: Prevent crystal sites from forming on top of existing crystal components
